cargo-features = ["default-run"]

[package]
name = "rustodon"
version = "0.1.0"
authors = ["The Rustodon team"]
edition = "2018"
default-run = "rustodon"

[workspace]
members = ['database/', 'lib/resopt/', 'lib/posticle/', 'lib/types/']

[dependencies]
chrono = "0.4"
dotenv = "0.13"
maplit = "1.0"
failure = "0.1.5"
failure_derive = "0.1.5"
lazy_static = "1.2"
itertools = "0.8.0"
resopt = { path = "lib/resopt/" }
structopt = "0.2.14"

regex = "1.1.0"
posticle = { path = "lib/posticle/" }
ammonia = "2.0.0"

types = { path = "lib/types" }

slog = "2.4"
slog-term = "2.4"
slog-async = "2.3"
slog-scope = "4.0"
rocket-slog = "0.4"

rocket = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.8"
validator_derive = "0.8"

diesel = { version = "1.3.3", features = ["postgres", "chrono", "r2d2"] }

openssl = "0.10.16"

[dependencies.db]
path = "database/"
package = "rustodon_database"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[dependencies.askama]
git = "https://github.com/djc/askama"
rev = "5549f9a"
features = ["with-rocket"]

[build-dependencies.askama]
git = "https://github.com/djc/askama"
rev = "5549f9a"
features = ["with-rocket"]
