cargo-features = ["default-run"]

[package]
name = "rustodon"
version = "0.1.0"
authors = ["The Rustodon team"]
edition = "2018"
default-run = "rustodon"

[workspace]
members = ['lib/resopt/', 'lib/posticle/']

[dependencies]
dotenv = "0.13.0"
maplit = "1.0.1"
failure = "0.1.5"
failure_derive = "0.1.5"
lazy_static = "1.3.0"
itertools = "0.8.0"
resopt = { path = "lib/resopt/" }
structopt = "0.2.15"

regex = "1.1.2"
posticle = { path = "lib/posticle/" }

slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog-scope = "4.1.1"
rocket-slog = "0.4.0"

rocket = "0.4.0"

serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
validator = "0.8.0"
validator_derive = "0.8.0"

askama = { version = "0.8.0", features = ["with-rocket"] }
ammonia = "2.0.0"

diesel = { version = "1.4.1", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
flaken = "0.2.2"
turnstile = { path = "lib/turnstile/" }

chrono = "0.4.6"
chrono-humanize = "0.0.11"

openssl = "0.10.19"
pwhash = "0.3.0"

base32 = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
