[package]
name = "rustodon"
version = "0.1.0"
authors = ["The Rustodon team"]
edition = "2018"
default-run = "rustodon"

[workspace]
members = ['lib/resopt/', 'lib/posticle/']

[dependencies]
dotenv = "0.14"
maplit = "1.0"
failure = "0.1.6"
failure_derive = "0.1.5"
lazy_static = "1.4"
itertools = "0.8.0"
resopt = { path = "lib/resopt/" }
structopt = "0.3.6"

regex = "1.3.1"
posticle = { path = "lib/posticle/" }

slog = "2.5"
slog-term = "2.4"
slog-async = "2.3"
slog-scope = "4.1"
rocket-slog = "0.4"

rocket = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
validator = "0.9"
validator_derive = "0.9"

askama = { version = "0.8.0", features = ["with-rocket"] }
ammonia = "3.0.0"

diesel = { version = "1.4.3", features = ["postgres", "chrono", "r2d2"] }
flaken = "0.2.2"

chrono = "0.4"
chrono-humanize = "0.0.11"

openssl = "0.10.25"
pwhash = "0.3"

base32 = "0.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
