[package]
name = "rustodon_database"
version = "0.1.0"
authors = ["The Rustodon team"]

[dependencies]
lazy_static = "1.0"
regex = "1.0"
maplit = "1.0"

diesel = { version = "1.3.2", features = ["postgres", "chrono", "r2d2"] }
flaken = "0.2.2"

rocket = "0.3.10"

pwhash = "0.2"
chrono = "0.4"
chrono-humanize = "0.0.11"

resopt = { path = "../lib/resopt/" }
