[package]
name = "rustodon_database"
version = "0.1.0"
authors = ["The Rustodon team"]

[dependencies]
lazy_static = "1.0"
regex = "1.0"
resopt = { path = "../lib/resopt/" }

diesel = { version = "1.3.2", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
flaken = "0.2.2"

rocket = "0.3.15"

pwhash = "0.2"
chrono = "0.4"
chrono-humanize = "0.0.11"

serde = "1.0"
serde_json = "1.0"
turnstile = { path = "../lib/turnstile" }
