[package]
name = "posticle"
description = "tools for working with Twitter-post-like text"
version = "0.1.0"
authors = ["Erin Moon <erin@hashbang.sh>"]
categories = ["text-processing"]

[dependencies]
lazy_static = "1.0.0"
nom = "4.0.0"
unic-ucd-category = "0.7.0"

[dev-dependencies]
pretty_assertions = "0.5.1"
yaml-rust = "0.4.2"
