[package]
name = "posticle"
description = "A parser and renderer for Twitter and Mastodon like text"
version = "0.3.0"
authors = ["Erin Moon <erin@hashbang.sh>", "Measly Twerp <measlytwerp@gmail.com>"]
categories = ["text-processing"]

[dependencies]
ammonia = "1.2"
maplit = "1.0"
pest = "2.0"
pest_derive = "2.0"

[dev-dependencies]
yaml-rust = "0.4.2"
pretty_assertions = "0.5.1"
